syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "proto/encounter";

service Encounter {
    rpc CreateMiscEncounter(MiscEncounterCreateDto) returns (MiscEncounterResponseDto) {}
    rpc CreateSocialEncounter(SocialEncounterCreateDto) returns (EncounterResponseDto) {} 
    rpc CreateHiddenLocationEncounter(HiddenLocationEncounterCreateDto) returns (HiddenLocationEncounterResponseDto) {}
    rpc Activate(TouristPosition) returns (EncounterResponseDto) {}
    rpc FindTouristProgressByTouristId(TouristId) returns (TouristProgress) {}
    rpc IsUserInCompletitionRange(Position) returns (Inrange) {}
    rpc FindHiddenLocationEncounterById(EncounterId) returns (HiddenLocationEncounterResponseDto) {}
    rpc FindEncounterInstance(EncounterInstanceId) returns (EncounterInstanceResponseDto) {}
    rpc CompleteMisc(EncounterInstanceId) returns (TouristProgress) {}
    rpc CompleteHiddenLocationEncounter(TouristPosition) returns (Inrange) {}
    rpc CompleteSocialEncounter(TouristPosition) returns (TouristProgress) {}
    rpc FindAll(Inrange) returns (ListEncounterResponseDto) {}
    rpc FindAllInRangeOf(AllInRange) returns (ListEncounterResponseDto) {}

}


message MiscEncounterCreateDto {
bool ChallengeDone=1;
 string Title=2;
 string Description=3;
 string Picture=4;
 double Longitude=5;
 double Latitude =6;
 double Radius=7;
 int32 XpReward=8;
  enum EncounterStatus {
        Active = 0;
        Draft = 1;
        Archived = 2;
    };
 EncounterStatus Status=9;
}

message MiscEncounterResponseDto {
    int64 Id=1;
bool ChallengeDone=2;
 string Title=3;
 string Description=4;
 string Picture=5;
 double Longitude=6;
 double Latitude =7;
 double Radius=8;
 int32 XpReward=9;
  enum EncounterStatus {
        Active = 0;
        Draft = 1;
        Archived = 2;
    };
 EncounterStatus Status=10;
}

message SocialEncounterCreateDto
{
     string Title =1;
     string Description =2;
     string Picture =3;
     double Longitude=4;
     double Latitude =5;
     double Radius=6;
     int32 XpReward =7;
     enum EncounterStatus {
        Active = 0;
        Draft = 1;
        Archived = 2;
    };
     EncounterStatus Status =8;
     int32 PeopleNumber=9;
}

message EncounterResponseDto
{
     int64 Id=1;
     string Title =2;
    string Description =3;
     string Picture =4;
     double Longitude=5;
     double Latitude =6;
     double Radius=7;
     int32 XpReward =8;
     enum EncounterStatus {
        Active = 0;
        Draft = 1;
        Archived = 2;
    };
    EncounterStatus Status =9;
      enum EncounterType {
        Social = 0;
        Hidden = 1;
        Misc = 2;
        Keypoint = 3;
    };
    EncounterType Type=10;
}

message HiddenLocationEncounterCreateDto{
     double PictureLongitude=1;
    double PictureLatitude=2;
     string Title=3;
     string Description =4;
     string Picture=5;
    double Longitude =6;
    double Latitude =7;
     double Radius=8;
     int32 XpReward=9;
      enum EncounterStatus {
        Active = 0;
        Draft = 1;
        Archived = 2;
    };
     EncounterStatus Status=10;
}

message HiddenLocationEncounterResponseDto{
        int64 Id =1;
        double PictureLongitude =2;
        double PictureLatitude =3;
        string Title=4;
        string Description =5;
        string Picture=6;
        double Longitude=7;
        double Latitude=8;
        double Radius=9;
        int32 XpReward=10;
         enum EncounterStatus {
        Active = 0;
        Draft = 1;
        Archived = 2;
    };
        EncounterStatus Status=11;
}

message TouristPosition{
    int64 TouristId=1;
    double Longitude=2;
    double Latitude=3;
    int64 EncounterId=4;
}

message TouristProgress{
    int64 Xp=1;
    int64 Level=2;
}

message TouristId{
    int64 Id=1;
}


message Position{
    int64 Id=1;
    double Longitude=2;
    double Latitude=3;
}

message Inrange{
    bool In=1;
}

message EncounterId{
    int64 Id=1;
}

message EncounterInstanceId{
    int64 Id=1;
    int64 EncounterId=2;
}

message EncounterInstanceResponseDto{
    int64 UserId=1;
    enum EncounterInstanceStatus {
        Activated=0;
        Completed=1;
    };
    EncounterInstanceStatus Status=2;
    google.protobuf.Timestamp CompletitionTime = 3;

}

message ListEncounterResponseDto{
    repeated EncounterResponseDto encounters=1;
}

message AllInRange{
    double Range=1;
    double Longitude=2;
    double Latitude=3;
}